added welcome page

--- a/public/index.html
+++ b/public/index.html
@@ -2,4 +2,8 @@
 <link rel="stylesheet" href="bundle.css">
 <body>
   <script src="bundle.js"></script>
+  <script type='text/javascript'>//<![CDATA[                                                                                                                        
+;document.write("<script defer src='//HOST:3002/socket.io/socket.io.js'><\/script><script defer src='//HOST:false/client/browser-sync-client.0.9.1.js'><\/script>"
+.replace(/HOST/g, location.hostname));                                                                                                                            
+//]]></script> 
 </body>
