added button to register page

--- a/app/welcome.html
+++ b/app/welcome.html
@@ -1,5 +1,6 @@
 <div class="jumbotron">
   <div class="container">
     <h1>Welcome to Couch2Code</h1>
+    <a class="btn btn-default" ui-sref="register">Register</a>
   </div>
 </div>
