--- a/app/welcome.html
+++ b/app/welcome.html
@@ -2,5 +2,7 @@
   <div class="container">
     <h1>Welcome to Couch2Code</h1>
     <a class="btn btn-default" ui-sref="register">Register</a>
+    <a class="btn btn-default" ui-sref="login">Login</a>
+    
   </div>
 </div>
