building out register/login templates

--- a/app/accounts/login.html
+++ b/app/accounts/login.html
@@ -1,1 +1,15 @@
-<h1>TODO LOGIN FORM</h1>
+<div class="container">
+    <h2>Developer Login</h2>
+    <p class="subheader">Not a member yet? Register <a href="#/register">here</a>!
+        <p>
+            <form class="login form" ng-submit="registerUser()">
+                <ul class="form-inputs">
+                    <li><input class="username" placeholder="Username or Email Address" ng-model="username in users || email in users"></li>
+                    <li><input class="password" placeholder="Password" ng-model="password in users"></li>
+                </ul>
+                <div class="form-controls">
+                    <input class="login btn btn-md-default" type="submit" value="Login">
+                    <button class="cancel btn btn-md-default" ng-click="#/">Cancel</button>
+                </div>
+            </form>
+</div>
