--- a/app/accounts/register.html
+++ b/app/accounts/register.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h2>Register as a Developer</h2>
-    <p class="subheader">Already a member? Signin <a href="#/register">here</a>!
+    <p class="subheader">Already a member? Sign in <a href="#/register">here</a>!
         <p>
             <form class="register form" ng-submit="register()">
                 <ul class="form-inputs">
@@ -13,4 +13,11 @@
                     <button class="cancel btn btn-md-default" ng-click="#/">Cancel</button>
                 </div>
             </form>
+            <div class="social-login">
+           		<ul class="icons">
+           			<li id="twitter"><a href="twitter-link-here"><img src="images/twitter-icon.svg"></li>
+           			<li id="github"><a href="github-link-here"><img src="iages/github-icon.svg"></li>
+           			<li id="tumblr"><a href="tumblr-link-here"><img src="images/tumblr-icon.svg"></li>
+           		</ul>
+            </div>
 </div>
