--- a/app/accounts/login.html
+++ b/app/accounts/login.html
@@ -1,1 +1,18 @@
-<h1>TODO LOGIN FORM</h1>
+<div class="container register">
+    <h2>Login as a Developer</h2> 
+        <p>If you're not yet a member, <a href="#/register">click here</a>!</p>
+    <form class="login-form" ng-submit="loginUser()">
+        <div class="form-inputs">
+            <input class="username" type="text" ng-model="user.username" placeholder="Username"/>
+            <input class="email" type="email" ng-model="user.email" placeholder="Email"/>
+            <input class="password" type="password" ng-model="user.password" placeholder="Password"/>
+        <div class="form-controls">
+            <input class="login btn btn-primary" type="submit" value="Login"/>
+            <button class="cancel btn btn-danger">Cancel</button>
+            <button>GitHub</button>
+        </div>
+    </form>
+        <div class="social-register">
+            <a class="github" href="#/github-link"><img src="../images/github-icon.svg">
+        </div>
+</div>
