--- a/app/accounts/login.html
+++ b/app/accounts/login.html
@@ -1,7 +1,7 @@
 <div class="container register">
     <h2>Login as a Developer</h2> 
         <p>If you're not yet a member, <a href="#/register">click here</a>!</p>
-    <form class="login-form" ng-submit="loginUser()">
+    <form class="login-form" ng-submit="login(user)">
         <div class="form-inputs">
             <input class="username" type="text" ng-model="user.username" placeholder="Username"/>
             <input class="email" type="email" ng-model="user.email" placeholder="Email"/>
