--- a/app/accounts/profile.html
+++ b/app/accounts/profile.html
@@ -1,4 +1,5 @@
-<h1>Account Profile</h1>
+<div class="profile container">
+    <h1>Account Profile</h1>
 <form ng-submit="createUser(user)">
   <label>Email</label>
   <input ng-model="user.email">
@@ -6,3 +7,4 @@
   <input type="password" ng-model="user.password">
   <button class="button button-default">Create User</button>
 </form>
+</div>
