--- a/app/accounts/register.html
+++ b/app/accounts/register.html
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="jumbotron">
     <div class="header">
     <h1>couch2code</h1>
@@ -20,3 +21,4 @@
             <a class="github" href="#/github-link"><img src="http://amillionbluepages.net/img/logos/octocat.png">
        </div>
 </div>
+    </div>
